Update header title to Rev. Basilius Magnus' Statement

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <body>
     <header class="header-bar">
         <div class="header-content">
-            <h1>Official Statement</h1>
+            <h1>Rev. Basilius Magnus' Statement</h1>
             <div class="header-date">November 18, 2025</div>
         </div>
     </header>
